--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -31,6 +31,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/flutter_pay/flutter_pay_config.json
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
