wip on flutter problem with json import

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,9 @@ flutter:
     androidPackage: com.plustmobileapps.flutterpay
     pluginClass: FlutterPayPlugin
 
+  assets:
+  - lib/assets/
+
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
